# allpoints-hvac-backend

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml  railway.toml
api/: main.py
docs/: railway-env-vars.md
models/: schemas.py
services/: elevenlabs_webhook.py  email_send.py  email_templates.py  supabase_client.py  twilio_client.py  urgent_call.py  utils.py  vendor_message.py
tests/: test_endpoints.py  test_urgent_call.py
