[project]
name = "allpoints-hvac-backend"
version = "0.1.0"
description = "AllPoints HVAC FastAPI backend — webhook endpoints for the ElevenLabs voice agent (AllPoints HVAC + Manny's Oil Company)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "resend>=2.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
